# slow-tracker

./: .gitignore  cmd.md  test.py
shfiles/: eight.sh
src/fast_pose_estimation/: CMakeLists.txt  README.md  package.xml  setup.py
src/fast_pose_estimation/launch/: main.launch  pose.rviz  rviz.launch  single_run_in_sim.launch  vins_rviz_config.rviz
src/fast_pose_estimation/src/: main.py
src/planner/minimal_snap/min_snap/: min_snap_closeform.cpp  package.xml
src/planner/minimal_snap/min_snap/launch/: default.rviz  min_snap.launch  real.launch
src/planner/minimal_snap/min_snap/src/: min_snap_closeform.cpp  min_snap_generator.cpp
src/planner/minimal_snap/my_visualization/: CMakeLists.txt  package.xml
src/planner/minimal_snap/my_visualization/include/my_visualization/: plan_visual.h
src/planner/minimal_snap/traj_server/launch/: my_sim.xml  real_traj_server.xml
src/planner/minimal_snap/traj_server/src/: my_traj_server.cpp
src/realflight_modules/VINS-Fusion/config/: fast_drone_250.yaml
src/realflight_modules/px4ctrl/config/: ctrl_param_fpv.yaml
src/realflight_modules/realsense-ros/realsense2_camera/launch/: rs_camera.launch
